src/components/common/Dropdown/styles.module.scss
.container {
  :global .rnd {
    &__root-menu {
      margin-block: 0.43rem;
    }

    &__menu {
      padding-block: 1rem;
      border-radius: 0.375rem;
      border: 1px solid hsl(var(--gray-5-color));
      background-color: hsl(var(--white-color));
      box-shadow: var(--shadow-4);
    }

    &__submenu {
      width: 9.93rem;
    }

    &__option {
      padding: 0.75rem 0.93rem;
      cursor: pointer;
      word-break: break-word;

      &:not(&--disabled):hover {
        background-color: hsl(var(--gray-6-color));
      }
    }

    &__option-icon {
      width: 1rem;
      height: 1rem;

      &--left {
        margin-right: 0.49rem;
      }
    }

    &__option-label {
      font-size: var(--c1-font-size);
      line-height: var(--c1-line-height);
      font-weight: 600;
    }
  }
}

